--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -8854,7 +8854,7 @@ zip.file("_micCal.txt", micCal);
         }
         await fetchSafe('target-level', 1, 75.0);
         const targetCurve = await postNext('Generate target measurement', 1);
-        const targetCurveIdx = parseInt(Object.keys(targetCurve.results));
+        const targetCurveIdx = Object.keys(targetCurve.results)[0];
         targetResponse = await fetchSafe(`frequency-response?smoothing=1%2F48&ppo=96`, mCount + 1);
         Object.freeze(targetResponse); // ensure it doesn't change once optimization starts
         await postDelete(mCount + 1);
@@ -9014,9 +9014,9 @@ zip.file("_micCal.txt", micCal);
           console.warn(`${commandId[i - nSpeakers]} could not be equalized!`);
         }
         const filter = await postNext('Generate filters measurement', i);
-        const filterIdx = parseInt(Object.keys(filter.results));
+        const filterIdx = Object.keys(filter.results)[0];
         const eqResponse = await postNext('Arithmetic', [i - nSpeakers, filterIdx], { function: "A * B" });
-        const eqResponseIdx = parseInt(Object.keys(eqResponse.results));
+        const eqResponseIdx = Object.keys(eqResponse.results)[0];
         const eqResponseName = `${commandId[i - nSpeakers]}-equalized`;
         await fetch_mREW(eqResponseIdx, 'PUT', { title: eqResponseName });
       }
@@ -9098,7 +9098,7 @@ zip.file("_micCal.txt", micCal);
       console.log("Calculating speaker -3dB points from target curve...");
       await fetchSafe('target-level', 1, 75.0);
       const tcData = await postNext('Generate target measurement', 1);
-      const tcIdx = parseInt(Object.keys(tcData.results));
+      const tcIdx = Object.keys(tcData.results)[0];
       const measurements = await fetch_mREW();
       const mCount = Object.keys(measurements).length;
       for (let i = nSpeakers + 2; i <= nSpeakers * 3 - 2; i += 2) {
@@ -9113,7 +9113,7 @@ zip.file("_micCal.txt", micCal);
         }
         await postNext('Smooth', idx, { smoothing: "Psy" }); // Psy is useful for rolloff detection, less noise
         const rpData = await postNext('Arithmetic', [idx, tcIdx], {function: "|A| / |B|"});
-        const rpIdx = parseInt(Object.keys(rpData.results));
+        const rpIdx = Object.keys(rpData.results)[0];
         const response = await fetchSafe('frequency-response?smoothing=1%2F48&ppo=96', rpIdx);
         const rpArray = response2array(response, 10, 250);
         const octave = Math.pow(2, 1/96);
@@ -9144,9 +9144,9 @@ zip.file("_micCal.txt", micCal);
       await postNext('Smooth', mCount, { smoothing: "Psy" }); // Psy is useful for rolloff detection, less noise
       await fetchSafe('target-level', 1, 75.0);
       const tcData = await postNext('Generate target measurement', 1);
-      const tcIdx = parseInt(Object.keys(tcData.results));
+      const tcIdx = Object.keys(tcData.results)[0];
       const rpData = await postNext('Arithmetic', [mCount, tcIdx], {function: "|A| / |B|"});
-      const rpIdx = parseInt(Object.keys(rpData.results));
+      const rpIdx = Object.keys(rpData.results)[0];
       const response = await fetchSafe('frequency-response?smoothing=1%2F48&ppo=96', rpIdx);
       const rpArray = response2array(response, 10, 250);
       const octave = Math.pow(2, 1/96);
@@ -9337,11 +9337,11 @@ zip.file("_micCal.txt", micCal);
         console.infoUpdate(`Generating final output for channel - ${commandId[i]}`);
         const eqSpeaker = nSpeakers + 2 * i;
         const spWithHPF = await genSpeaker(eqSpeaker, customCrossover[i]);
-        const spWithHPFIdx = parseInt(Object.keys(spWithHPF.results));
+        const spWithHPFIdx = Object.keys(spWithHPF.results)[0];
         const subWithLPF = await genSub(nSpeakers * 3, customCrossover[i]);
-        const subWithLPFIdx = parseInt(Object.keys(subWithLPF.results));
+        const subWithLPFIdx = Object.keys(subWithLPF.results)[0];
         const finalResponse = await postNext('Arithmetic', [spWithHPFIdx, subWithLPFIdx], { function: "A + B" });
-        const finalResponseIdx = parseInt(Object.keys(finalResponse.results));
+        const finalResponseIdx = Object.keys(finalResponse.results)[0];
         const finalResponseName = commandId[i] + `final-${customCrossover[i]}hz-xo`;
         await fetch_mREW(finalResponseIdx, 'PUT', { title: finalResponseName });
         await postDelete(subWithLPFIdx);
@@ -9349,11 +9349,11 @@ zip.file("_micCal.txt", micCal);
       }
       console.infoUpdate("Generating final output for channel - LFE");
       const LFEChannel = await genSub(nSpeakers * 3, 120);
-      const LFEChannelIdx = parseInt(Object.keys(LFEChannel.results));
+      const LFEChannelIdx = Object.keys(LFEChannel.results)[0];
       await fetch_mREW(LFEChannelIdx, 'PUT', { title: "LFEfinal-120hz-LPF" });
       await fetchSafe('target-level', 1, 75.0);
       const targetCurve = await postNext('Generate target measurement', 1);
-      const targetCurveIdx = parseInt(Object.keys(targetCurve.results));
+      const targetCurveIdx = Object.keys(targetCurve.results)[0];
       const targetName = (targetCurveName === "" ? "TC-DEQ" : targetCurveName) + " @ 75dB";
       await fetch_mREW(targetCurveIdx, 'PUT', { title: targetName });
       // room curve no longer needed. keeping it enabled will only confuse on next run
