--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -8859,9 +8859,9 @@ zip.file("_micCal.txt", micCal);
         await fetchSafe('target-level', 1, 75.0);
         const targetCurve = await postNext('Generate target measurement', 1);
         const targetCurveIdx = Object.keys(targetCurve.results)[0];
-        targetResponse = await fetchSafe(`frequency-response?smoothing=1%2F48&ppo=96`, mCount + 1);
+        targetResponse = await fetchSafe(`frequency-response?smoothing=1%2F48&ppo=96`, targetCurveIdx);
         Object.freeze(targetResponse); // ensure it doesn't change once optimization starts
-        await postDelete(mCount + 1);
+        await postDelete(targetCurveIdx);
       }
       else {
         console.error(`Failed to fetch target curve, please make sure to have started REW API server! HTTP status code: ${tcResponse.status}.`);
@@ -8960,7 +8960,7 @@ zip.file("_micCal.txt", micCal);
         mSec[i] += parseFloat(measurements[i].cumulativeIRShiftSeconds);
       }
       console.infoUpdate("Completed speaker volume & time alignment!");
-      if (noSub) { return; } // no need to go further without sub
+      if (noSub) { return; } // no need to go further without subwoofer
       const minM = Math.min(...mSec.slice(1, nSpeakers));
       const maxM = Math.max(...mSec.slice(1, nSpeakers));
       const limInsec = 6.00049999 / sOs;
@@ -9044,7 +9044,7 @@ zip.file("_micCal.txt", micCal);
         customLevel[i] += spSum;
         if (spSum != 0) { console.info(`${commandId[i].padStart(3, ".")} - shifted: ${customLevel[i] - spSum}dB → ${customLevel[i]}dB (${spSum}dB)`); }
       }
-      if (noSub) { return; }
+      if (noSub) { return; } // no need to go further without subwoofer
       spSum = 0.0;
       const subFilterResponse = await fetchSafe('frequency-response?smoothing=1%2F48&ppo=96', nSpeakers * 3 - 1);
       const subFilterArray = await response2array(subFilterResponse, 30, 80);
@@ -9068,7 +9068,7 @@ zip.file("_micCal.txt", micCal);
           console.info(`${commandId[i].padStart(3, ".")} - applied adjustment: ${customLevel[i]}dB`);
         }
       }
-      if (noSub) { return; }
+      if (noSub) { return; } // no need to go further without subwoofer
       for (let i = nSpeakers; i < nSpeakers + numSub; i++) {
         const customLevelOriginal = customLevel[i];
         customLevel[i] = Math.max(subLO, customLevel[i]);
@@ -9155,7 +9155,7 @@ zip.file("_micCal.txt", micCal);
       await postDelete(tcIdx);
     }
     async function calculateSubBandwidth() {
-      if (noSub) { return; }
+      if (noSub) { return; } // no need to go further without subwoofer
       console.log("Calculating subwoofer -3dB points from target curve...")
       const measurements = await fetch_mREW();
       const mCount = Object.keys(measurements).length;
@@ -9192,7 +9192,7 @@ zip.file("_micCal.txt", micCal);
       console.info(`${commandId[nSpeakers].padStart(3, ".")} bandwidth: ${subLowFreq.toFixed(2)}hz - ${subHighFreq.toFixed(2)}hz → Usable XO range: ${minXO}hz - ${maxXO}hz`);
     }
     function finalizeInitialXO() {
-      if (noSub) { return; }
+      if (noSub) { return; } // no need to go further without subwoofer
       console.log("Sanity checking initial XOs based on usable XO range...")
       for (let i = 1; i < nSpeakers; i++) {
         const singleChannel = isSingleChannel(commandId[i]);
@@ -9210,7 +9210,7 @@ zip.file("_micCal.txt", micCal);
       console.info("Completed sanity checks on initial XOs!");
     }
     async function optimizeSubDelay() {
-      if (noSub) { return; }
+      if (noSub) { return; } // no need to go further without subwoofer
       let minSum = Infinity, subMoves = NaN;
       let isPossibleI = false, requiredDelayI = NaN, isInverted = false;
       const measurements = await fetch_mREW();
@@ -9308,7 +9308,7 @@ zip.file("_micCal.txt", micCal);
       }
     }
     async function finalizeXO(start=20, end=250) {
-      if (noSub) { return; }
+      if (noSub) { return; } // no need to go further without subwoofer
       console.log("Finalizing crossover frequencies to best follow the target curve...");
       const measurements = await fetch_mREW();
       const mCount = Object.keys(measurements).length;
