changed to dark theme

--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -31,8 +31,8 @@
   <style>
     body {
       font-family: Open Sans, sans-serif;
-      background-color: #f2f2f2;
-      color: #333333;
+      background-color: #0d0d0d;
+      color: #cccccc;
       margin: 0;
       padding: 0;
     }
@@ -52,13 +52,13 @@
       background-color: transparent;
       padding: 12px 20px;
       border-radius: 20px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3), -2px -2px 5px rgba(255, 255, 255, 0.5);
+      box-shadow: 0 4px 8px rgba(128, 128, 128, 0.2);
+      text-shadow: 2px 2px 5px rgba(96, 96, 96, 0.3), -2px -2px 5px rgba(96, 96, 96, 0.5);
     }
     h3 {
       font-size: 18px;
       color: #357ebd;
-      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3), -2px -2px 5px rgba(255, 255, 255, 0.5);
+      text-shadow: 2px 2px 5px rgba(96, 96, 96, 0.3), -2px -2px 5px rgba(96, 96, 96, 0.5);
     }
     strong {
       font-style: italic;
@@ -80,7 +80,7 @@
       border: none;
       color: #ffffff;
       background-color: #FFA500;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 4px 8px rgba(128, 128, 128, 0.2);
       transition: all 0.3s ease;
       cursor: pointer;
       width: 250px;
@@ -88,7 +88,7 @@
     button:hover {
       background-color: #357ebd;
       transform: translateY(-2px);
-      box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 6px 10px rgba(96, 96, 96, 0.3);
     }
     button:disabled {
       opacity: 0.5;
@@ -98,13 +98,13 @@
       display: none;
     }
     #logContainer {
-      background-color: #e0e0e0;
-      color: #000000;
+      background-color: #102030;
+      color: #cccccc;
       padding: 5px;
       border-radius: 5px;
       max-height: 280px;
       overflow-y: auto;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 2px 4px rgba(96, 96, 96, 0.2);
       margin-bottom: 1px;
       font-size: 13px !important;
     }
@@ -163,13 +163,13 @@
       margin-top: 25px;
     }
     .small-bullet {font-size: 13px;}
-    .warning {color:rgba(204, 102, 0, 1);
+    .warning {color:#ffA533;
     }
-    .error {color: red;
+    .error {color: #ff3333;
       font-weight: bold
     }
-    .info {color: darkslategrey;}
-    .log {color: blue;}
+    .info {color: #cccccc;}
+    .log {color: #33cc33;}
     .customization-options {
       margin-top: 10px;
       border-top: 1px solid #ccc;
@@ -194,7 +194,7 @@
     .explanation {
       margin-left: 10px;
       font-size: 0.9em;
-      color: #666;
+      color: #888;
     }
     .customization-options.new-style {
       display: block;
