--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -8764,7 +8764,7 @@ zip.file("_micCal.txt", micCal);
         const rightW = parseFloat(irWindows.rightWindowWidthms);
         const refTime = parseFloat(irWindows.refTimems);
         await postNext('Arithmetic', [i, mCount], {function: "A * B"});
-        await postSafe(`http://localhost:4735/measurements/${mCount + i}/ir-windows`, { leftWindowWidthms: leftW, rightWindowWidthms: rightW, refTimems: refTime }, "Update processed");
+        await postSafe(`${baseUrl}/${mCount + i}/ir-windows`, { leftWindowWidthms: leftW, rightWindowWidthms: rightW, refTimems: refTime }, "Update processed");
         const name = measurements[i].title;
         await fetch_mREW(mCount + i, 'PUT', { title: name });
       }
@@ -8780,7 +8780,7 @@ zip.file("_micCal.txt", micCal);
       const measurements = await fetch_mREW();
       const mCount = Object.keys(measurements).length;
       for (let i=1; i <= mCount; i++) {
-        await postSafe(`http://localhost:4735/measurements/${i}/room-curve-settings`, {
+        await postSafe(`${baseUrl}/${i}/room-curve-settings`, {
           addRoomCurve: true, lowFreqRiseStartHz: 630, lowFreqRiseEndHz: 100, lowFreqRiseSlopedBPerOctave: 0.8,
           highFreqFallStartHz: 630, highFreqFallSlopedBPerOctave: 0.8
         }, "Update processed");
@@ -8791,7 +8791,7 @@ zip.file("_micCal.txt", micCal);
       const measurements = await fetch_mREW();
       const mCount = Object.keys(measurements).length;
       for (let i=1; i <= mCount; i++) {
-        await postSafe(`http://localhost:4735/measurements/${i}/room-curve-settings`, { addRoomCurve: false }, "Update processed");
+        await postSafe(`${baseUrl}/${i}/room-curve-settings`, { addRoomCurve: false }, "Update processed");
       }
     }
     async function bootUp() {
@@ -8803,9 +8803,9 @@ zip.file("_micCal.txt", micCal);
       if (isCirrusLogic) {mCount--;};
       let baseMessage = "Resetting IR windows, EQ type, target shape and smoothing for all measurements..."
       for (let q = 1; q <= mCount; q++) {
-        await postSafe(`http://localhost:4735/measurements/${q}/ir-windows`, { leftWindowType: "Rectangular", rightWindowType: "Rectangular" }, "Update processed");
-        await postSafe(`http://localhost:4735/measurements/${q}/equaliser`, { manufacturer: "Generic", model: "Generic" }, "Equaliser selected");
-        await postSafe(`http://localhost:4735/measurements/${q}/target-settings`, { shape: "None" }, "Update processed");
+        await postSafe(`${baseUrl}/${q}/ir-windows`, { leftWindowType: "Rectangular", rightWindowType: "Rectangular" }, "Update processed");
+        await postSafe(`${baseUrl}/${q}/equaliser`, { manufacturer: "Generic", model: "Generic" }, "Equaliser selected");
+        await postSafe(`${baseUrl}/${q}/target-settings`, { shape: "None" }, "Update processed");
         await postNext('Smooth', q, { smoothing: "1/48" });
         console.infoUpdate(`${baseMessage} (${q}/${mCount})`);
       }
@@ -8906,7 +8906,7 @@ zip.file("_micCal.txt", micCal);
             problemG.push(titleKey);
           }
         }
-        if (problemG.some(group => group.startsWith('SW')) && nSubs > 1) {
+        if (problemG.some(group => group.startsWith('SW')) && bassMode === "Directional") {
           console.info(`'Directional bass' mode with '${nSubs}' subwoofers detected!`);
         } else {
           console.error('Speaker names have different numbers of indices.');
@@ -8915,49 +8915,57 @@ zip.file("_micCal.txt", micCal);
       }
       return;
     }
-    function updateDelayRange() {
-      const minM = Math.min(...mSec.slice(1, nSpeakers + nSubs + 1));
-      const maxM = Math.max(...mSec.slice(1, nSpeakers + nSubs + 1));
+    function finalizeDelayHeadroom() {
+      const minM = Math.min(...mSec.slice(1, nSpeakers + 1));
+      const maxM = Math.max(...mSec.slice(1, nSpeakers + 1));
       const limInsec = 6 / sOs;
       const msecMin = maxM - limInsec;
       const msecMax = minM + limInsec;
-      maxNegative = Math.min(msecMin * 1000, 0);
-      maxPositive = Math.max(msecMax * 1000, 0);
-      if (maxNegative === maxPositive) {
+      maxNegative = msecMin * 1000;
+      maxPositive = msecMax * 1000;
+      if (maxNegative > maxPositive) {
         console.error("Ran out of delay range!");
         throw new Error;
       }
+      Object.freeze(maxNegative);
+      Object.freeze(maxPositive);
     }
     // returns range that "thisDelay" can be shifted by
     function getDelayRangeOf(thisDelay) {
-      updateDelayRange();
       const delayms = thisDelay * 1000;
-      const loDelay = Math.min(maxNegative - delayms, 0);
-      const hiDelay = Math.max(maxPositive - delayms, 0);
-      if (loDelay === hiDelay) {
+      let loDelay = Infinity, hiDelay = -Infinity;
+      if (thisDelay < 0) {
+        loDelay = maxNegative - delayms;
+        hiDelay = maxPositive;
+      }
+      else {
+        loDelay = maxNegative;
+        hiDelay = maxPositive - delayms;
+      }
+      if (loDelay > hiDelay) {
         console.error("Ran out of delay range!");
         throw new Error;
       }
       return [loDelay, hiDelay];
     }
     function getDelayRangeOfFinalSub() {
-      let [loDelay, hiDelay] = getDelayRangeOf(mSec[nSpeakers]);
-      if (nSubs > 1) {
+      let [loDelay, hiDelay] = getDelayRangeOf(mSec[nChannels]);
+      // directional subwoofer delay(s)
+      if (bassMode === "Directional") {
         for (let i = nSpeakers + 2; i <= nSpeakers + nSubs; i++) {
-          let [tmpLoDelay, tmpHiDelay] = getDelayRangeOf(mSec[i]);
+          const [tmpLoDelay, tmpHiDelay] = getDelayRangeOf(mSec[i]);
           loDelay = Math.max(loDelay, tmpLoDelay);
           hiDelay = Math.min(hiDelay, tmpHiDelay);
         }
       }
+      // standard bass relative delay(s)
       else {
         const stdBassDelay = multisubDelay / sOs;
-        let [tmpLoDelay, tmpHiDelay] = getDelayRangeOf(mSec[nSpeakers] + stdBassDelay);
+        const [tmpLoDelay, tmpHiDelay] = getDelayRangeOf(mSec[nSpeakers] + stdBassDelay);
         loDelay = Math.max(loDelay, tmpLoDelay);
         hiDelay = Math.min(hiDelay, tmpHiDelay);
       }
-      loDelay = Math.min(loDelay, 0);
-      hiDelay = Math.max(hiDelay, 0);
-      if (loDelay === hiDelay) {
+      if (loDelay > hiDelay) {
         console.error("Ran out of delay range!");
         throw new Error;
       }
@@ -8970,7 +8978,7 @@ zip.file("_micCal.txt", micCal);
       for (let i = 1; i <= mCount; i++) {
         const name = measurements[i].title;
         if (name.startsWith("SW")) {
-          await postSafe(`http://localhost:4735/measurements/${i}/command`, { command: "Response copy" }, "Completed");
+          await postSafe(`${baseUrl}/${i}/command`, { command: "Response copy" }, "Completed");
         }
       }
       for (let i = mCount; i >= 1; i--) {
@@ -9004,7 +9012,7 @@ zip.file("_micCal.txt", micCal);
         }
         // level match all other positions to MLP & average
         await alignVol2MLP(indices, i);
-        micPositions === 1 ? await postSafe(`http://localhost:4735/measurements/${i}/command`, {command: "Response copy" }, "Completed") :
+        micPositions === 1 ? await postSafe(`${baseUrl}/${i}/command`, {command: "Response copy" }, "Completed") :
                              await postNext('Magn plus phase average', indices);
         // the "o" measurement
         const idx = mCount + count;
@@ -9023,22 +9031,29 @@ zip.file("_micCal.txt", micCal);
         commandId[i] = title[i].slice(0, -1);
       }
       console.infoUpdate("Executing precision temporal alignment across the speaker array for optimal coherence...");
+      // align speakers but leave subwoofers alone. ANY align command messes up subwoofer IR alignment
       const spIndices = Array.from({ length: nSpeakers }, (_, j) => j + 1);
       await postNext('Cross corr align', spIndices);
       measurements = await fetch_mREW();
       for (let i = 1; i <= nSpeakers; i++) {
         mSec[i] -= parseFloat(measurements[i].cumulativeIRShiftSeconds);
       }
+      finalizeDelayHeadroom();
+      // remove audyssey IR delay but preserve relative IR delay differences
+      const audyIRStartDelay = measurements[spIndices[0]].timeOfIRStartSeconds;
+      for (let i = 1; i <= nSpeakers + nSubs; i++) {
+        await postNext('Offset t=0', i, {offset: audyIRStartDelay, unit: "seconds"});
+      }
       console.infoUpdate("Completed speaker volume & time alignment!");
       if (noSub) { return; } // no need to go further without subwoofer
-      if (nSubs > 1) {
+      if (bassMode === "Directional") {
         console.warn("Your system will now be converted to 'standard bass' mode for a better sound experience...");
         await directional2standard();
         console.warn("Conversion from 'directional bass' mode to 'standard bass' mode completed.")
       }
-      updateDelayRange();
+      const [loDelay, hiDelay] = getDelayRangeOfFinalSub();
       console.info(`Available bass system volume adjustment range → { ${subLO}dB : ${subHI}dB }`);
-      console.info(`Total 'delay headroom' available to subwoofer after maxing out all tweaks → ${(maxPositive-maxNegative).toFixed(2)}ms`);
+      console.info(`Total subwoofer 'delay headroom' available → ${(hiDelay-loDelay).toFixed(2)}ms`);
     }
     async function generateFilters() {
       console.log(`Generating EQ filters based on Min. Phase responses...`);
@@ -9301,10 +9316,10 @@ zip.file("_micCal.txt", micCal);
         subMoves = loDelay;
         isInverted = false;
       }
-      if (isInverted) {await postSafe(`http://localhost:4735/measurements/${nChannels * 3}/command`,{command: "Invert"}, "Invert completed");}
+      if (isInverted) {await postSafe(`${baseUrl}/${nChannels * 3}/command`,{command: "Invert"}, "Invert completed");}
       subMoves /= 1000;
       await postNext('Offset t=0', nChannels * 3, {offset: subMoves, unit: "seconds"});
-      if (nSubs > 1) {
+      if (bassMode === "Directional") {
         for (let i = nSpeakers + 1; i <= nSpeakers + nSubs; i++) {
           mSec[i] -= subMoves;
           invertSub[i] = isInverted ? !invertSub[i] : invertSub[i];
@@ -9336,7 +9351,13 @@ zip.file("_micCal.txt", micCal);
       for (let i = 1; i <= nSpeakers + nSubs; i++) {
         customDistance[i] = flDist + (mSec[flIndex] - mSec[i]) * sOs;
         if (distMinSub < 0) {
-          customDistance[i] += Math.abs(distMinSub) + multisubDelay; // multisubdelay is there for SWMIX responses
+          if (bassMode === "Directional") {
+            customDistance[i] += Math.abs(distMinSub);
+          }
+          else {
+            // multisubdelay is there for SWMIX responses, should be 0 in directional
+            customDistance[i] += Math.abs(distMinSub) + multisubDelay;
+          }
         }
         customDistance[i] = Math.round(parseFloat(customDistance[i]) * 100) / 100;
         if (i > nSpeakers) {
@@ -9455,7 +9476,7 @@ zip.file("_micCal.txt", micCal);
       let currSubIdx = nSpeakers + 1;
       let cmdIds = commandId[currSubIdx];
       for (let i = nSpeakers + 2; i <= nSpeakers + nSubs; i++) {
-        console.log(`Aligning ${cmdIds} with ${commandId[i]}...`);
+        console.log(`Aligning ${commandId[i]} to ${cmdIds}...`);
         const [isPossible, requiredDelay, isInverted, sumIndex] = await alignMsub(currSubIdx, i);
         if (!isPossible) {
           console.error("Failed to align multiple subwoofers!");
@@ -9525,14 +9546,16 @@ zip.file("_micCal.txt", micCal);
       return Math.round(offset * 2) / 2; // round to nearest 0.5
     }
     async function getMaxSumArray(ind1, ind2, start, end) {
-      let maxSumArray = [];
-      const ind1FreqResponse = await fetchSafe('frequency-response?smoothing=Var&ppo=96', ind1);
-      const ind1Array = response2array(ind1FreqResponse, start, end);
-      const ind2FreqResponse = await fetchSafe('frequency-response?smoothing=Var&ppo=96', ind2);
-      const ind2Array = response2array(ind2FreqResponse, start, end);
-      const arrayLength = Math.min(ind1Array.length, ind2Array.length);
-      for (let i = 0; i < arrayLength; i++) {
-        maxSumArray.push(ind1Array[i] + ind2Array[i]);
+      const measurements = await fetch_mREW();
+      const mCount = Object.keys(measurements).length;
+      const ind1Mag = await postSafe(`${baseUrl}/${ind1}/command`, { command: "Response magnitude copy" }, "Completed");
+      const ind2Mag = await postSafe(`${baseUrl}/${ind2}/command`, { command: "Response magnitude copy" }, "Completed");
+      const magSum = await postNext('Arithmetic', [mCount + 1, mCount + 2], {function: "A + B"});
+      await postNext('Add SPL offset', mCount + 3, { offset: 6 }); // 6dB theoretical maximum gain
+      const maxSumResponse = await fetchSafe('frequency-response?smoothing=Var&ppo=96', mCount + 3);
+      const maxSumArray= response2array(maxSumResponse, start, end);
+      for (let i = mCount + 3; i > mCount ; i--) {
+        await postDelete(i);
       }
       return maxSumArray;
     }
@@ -9548,10 +9571,9 @@ zip.file("_micCal.txt", micCal);
       }
     }
     async function align4system(ind1, ind2, start=20, end=250) {
-      const maxSumArray = await getMaxSumArray(ind1, ind2, start, end);
       const [loDelay, hiDelay] = getDelayRangeOfFinalSub();
-      console.info(`Available delay range: ${loDelay.toFixed(2)}ms - ${hiDelay.toFixed(2)}ms`);
-      let isInverted = false, isPossible = false, requiredDelay = NaN, bestFreq = NaN, minRmsError= Infinity;
+      console.info(`Available delay range: ${loDelay.toFixed(2)}ms <-> ${hiDelay.toFixed(2)}ms`);
+      let isInverted = false, isPossible = false, requiredDelay = NaN, bestFreq = NaN, maxSum = -Infinity;
       await postSafe("http://localhost:4735/alignment-tool/index-a", ind1, "selected as measurement A");
       await postSafe("http://localhost:4735/alignment-tool/index-b", ind2, "selected as measurement B");
       await postAlign('Reset all');
@@ -9568,11 +9590,11 @@ zip.file("_micCal.txt", micCal);
         const delayB = -parseFloat(await fetchAlign('delay-b'));
         if (noInversion && invertB) { continue; };
 
-        const tempSum = await fetchAlign('aligned-frequency-response?smoothing=Var&ppo=96');
+        const tempSum = await fetchAlign('aligned-frequency-response?smoothing=Psy&ppo=96');
         const tempSumArray = response2array(tempSum, start, end);
-        const rmsError = calculateRMSError(tempSumArray, maxSumArray);
-        if (rmsError < minRmsError) {
-          minRmsError = rmsError;
+        const tempMagSum = tempSumArray.reduce((acc, val) => acc + val, 0);
+        if (maxSum < tempMagSum) {
+          maxSum = tempMagSum;
           bestFreq = checkFreq;
           isPossible = true;
           requiredDelay = delayB;
@@ -9596,7 +9618,7 @@ zip.file("_micCal.txt", micCal);
     async function alignMsub(ind1, ind2, start=20, end=120) {
       const maxSumArray = await getMaxSumArray(ind1, ind2, start, end);
       const [loDelay, hiDelay] = getDelayRangeOf(mSec[ind2]);
-      console.info(`Available delay range: ${loDelay.toFixed(2)}ms - ${hiDelay.toFixed(2)}ms`);
+      console.info(`Available delay range: ${loDelay.toFixed(2)}ms <-> ${hiDelay.toFixed(2)}ms`);
       let isInverted = false, isPossible = false, requiredDelay = NaN, bestFreq = NaN, minRmsError = Infinity, sumIndex = null;
       await postSafe("http://localhost:4735/alignment-tool/index-a", ind1, "selected as measurement A");
       await postSafe("http://localhost:4735/alignment-tool/index-b", ind2, "selected as measurement B");
@@ -9663,7 +9685,7 @@ zip.file("_micCal.txt", micCal);
     }
     async function genSpeaker(i, freq) {
       if (freq === "L") {
-        return await postSafe(`http://localhost:4735/measurements/${i}/command`, { command: "Response copy" }, "Completed");
+        return await postSafe(`${baseUrl}/${i}/command`, { command: "Response copy" }, "Completed");
       }
       await postSafe(`${baseUrl}/${i}/filters`, {
         filters: [{
@@ -27600,7 +27622,7 @@ zip.file("_micCal.txt", micCal);
         if (customCrossover[i] > 90) {customCrossover[i] /= 10;} 
       }
       const jsonData = JSON.parse(adyContents);
-      if (nSubs > 1) {
+      if (bassMode === "Directional") {
         let ii = 54;
         for (let i = nChannels - 1; i < jsonData.detectedChannels.length; i++) {
           const swChannel = jsonData.detectedChannels[i];
@@ -27684,10 +27706,10 @@ zip.file("_micCal.txt", micCal);
             channel.customDistance = Math.round(parseFloat(customDistanceValue) * 100) / 100;
             channel.customLevel = customLevelValue.toFixed(1);
             channel.frequencyRangeRolloff = 250;
-            if (nSubs > 1) { k++ };
+            if (bassMode === "Directional") { k++ };
           }
         }
-        if (nSubs > 1) {
+        if (bassMode === "Directional") {
           jsonData.subwooferLayout = "N/A";
           sOs === 343 ? jsonData.subwooferMode = "Standard" : jsonData.subwooferMode = "N/A";
         }
